--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ a{
     display: flex;
     align-items: center;
     height: calc(100vh - 66px);
-    background: linear-gradient(var(--hero-overlay), var(--hero-overlay)), url('/assets/atf_v1.jpeg') no-repeat center;
+    background: linear-gradient(var(--hero-overlay), var(--hero-overlay)), url('assets/atf_v1.jpeg') no-repeat center;
     background-size: cover;
 }
 .pre_head{
