--- a/main.css
+++ b/main.css
@@ -157,6 +157,38 @@ a{
     left: 50%;
     transform: translateX(-50%);
 }
+/* stats */
+.stats{
+    background: url('assets/stats_bg_v1.jpeg') no-repeat;
+    background-position: left bottom;
+    background-size: cover;
+    min-height: 30vh;
+    padding: 80px 0;
+    margin: 0 0 80px;
+}
+.stats_container{
+    
+}
+.stats_cards{
+    display: flex;
+    justify-content: space-between;
+}
+.stat_card{
+    width: 100%;
+    max-width: 200px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: var(--cta-border-radius);
+}
+.stat_number{
+    font-size: 44px;
+    font-weight: 700;
+}
 /* call cta popup */
 .call_cta_popup{
     position: fixed;
