--- a/main.css
+++ b/main.css
@@ -6,8 +6,9 @@
 :root{
     --main-green: #4CAF50;
     --main-black: #232431;
-    --cta-border-radius: 6px;
-    --hero-overlay: rgba(0,0,0,0.45);
+    --border-radius: 10px;
+    --header-height: 90px;
+    --hero-overlay: rgba(0,0,0,0.4);
     --industry-overlay: rgba(0,0,0,0.35);
 }
 html{
@@ -44,7 +45,7 @@ a{
 .logo_full{
     font-size: 14px;
 }
-/* navigation */
+/* navigation ******************************/
 .navigation{
     display: flex;
     gap: 0 10px;
@@ -61,27 +62,53 @@ a{
     justify-content: center;
     width: 150px;
     max-width: 100%;
-    /* border-radius: var(--cta-border-radius); */
+    border-radius: var(--border-radius);
     transition: 0.3s all;
     color: #FFFFFF;
     background-color: var(--main-black);
 }
 .call_cta:hover{
     text-decoration: none;
+    border: 2px solid;
     color: var(--main-black);
     background-color: transparent;
-    border: 2px solid;
 }
-/* hero section */
+/* hero section ************************/
+.hero_wrap{
+    height: calc(100vh - var(--header-height));
+    padding: 10px;
+}
+.active_hero{
+    animation: show_down 1.4s linear;
+}
+@keyframes show_down {
+    0%{
+        height: 0;
+    }
+    100%{
+        height: calc(100vh - var(--header-height));
+    }
+}
 .hero{
+    height: calc(100vh - var(--header-height));
+    /* padding: 80px 0; */
     display: flex;
     align-items: center;
-    height: calc(100vh - 66px);
-    background: linear-gradient(var(--hero-overlay), var(--hero-overlay)), url('assets/atf_v1.jpeg') no-repeat center;
+    border-radius: var(--border-radius);
+    background: linear-gradient(var(--hero-overlay), var(--hero-overlay)), url('assets/stats_bg_v5.jpeg') no-repeat center;
     background-size: cover;
 }
+.hero_container{
+    /* visibility: hidden; */
+    opacity: 0;
+    transition: 0.7s all;
+}
+.hero_container_active{
+    /* visibility: visible; */
+    opacity: 1;
+}
 .pre_head{
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
     text-transform: uppercase;
     text-decoration: underline;
     /* text-decoration-style: double; */
@@ -91,7 +118,7 @@ a{
     font-size: 54px;
     font-weight: 600;
     max-width: 600px;
-    margin: 20px 0 50px;
+    margin: 10px 0 50px;
     line-height: 1.2;
     color: #FFFFFF;
 }
@@ -102,10 +129,10 @@ a{
     width: auto;
     font-size: 24px;
     padding: 10px 20px;
-    border: 2px solid #FFFFFF;
-    transition: 0.3s all;
     color: #FFFFFF;
     background-color: #171820;
+    border-radius: var(--border-radius);
+    transition: 0.3s all;
 }
 .hero_cta:hover{
     /* border: 2px solid var(--main-black); */
@@ -126,7 +153,7 @@ a{
     overflow: hidden;
     max-width: 270px;
     line-height: 0;
-    border-radius: var(--cta-border-radius);
+    border-radius: var(--border-radius);
 }
 .industry_card:hover .industry_image{
     transform: scale(1.3);
@@ -135,7 +162,7 @@ a{
     object-fit: cover;
     object-position: center;
     max-width: 100%;
-    border-radius: var(--cta-border-radius);
+    border-radius: var(--border-radius);
     transition: 0.5s all;
 }
 .industry_overlay{
@@ -159,10 +186,10 @@ a{
 }
 /* stats */
 .stats{
-    background: url('assets/stats_bg_v5.jpeg') no-repeat;
-    background-position: left center;
-    background-size: cover;
-    min-height: 30vh;
+    /* background: url('assets/stats_bg_v5.jpeg') no-repeat; */
+    /* background-position: left center; */
+    /* background-size: cover; */
+    /* min-height: 30vh; */
     padding: 80px 0;
     margin: 0 0 80px;
 }
@@ -170,6 +197,7 @@ a{
     font-size: 46px;
     font-weight: 700;
     margin: 0 0 50px;
+    text-decoration: underline;
 }
 .stats_cards{
     display: flex;
@@ -186,7 +214,7 @@ a{
     background-color: #FFFFFF;
     /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border-radius: var(--cta-border-radius);
+    border-radius: var(--border-radius);
 }
 .stat_number{
     font-size: 44px;
@@ -236,4 +264,14 @@ a{
     font-size: 44px;
     text-align: center;
     pointer-events: none;
+}
+/* footer ****************************/
+footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: var(--main-black);
+}
+.company_details{
+    color: #FFFFFF;
 }
