--- a/main.css
+++ b/main.css
@@ -214,13 +214,97 @@ a{
     transition: 0.3s all;
 }
 
+/* key projects */
+.key_projects{
+    padding: 80px 0;
+}
+.key_projects_head{
+    text-decoration: underline;
+    text-decoration-style: dotted;
+    text-align: center;
+    font-size: 50px;
+    margin: 0 0 80px;
+}
+.key_projects_wrap{
+    display: flex;
+    flex-direction: column;
+    gap: 150px 0;
+}
+.key_project{
+    display: flex;
+    gap: 0 40px;
+}
+.key_project_left{
+    max-width: 600px;
+}
+.key_project_main_image{
+    max-width: 100%;
+    margin: 0 0 10px;
+    border-radius: var(--border-radius);
+}
+.mini_photos{
+    display: flex;
+    gap: 0 12px;
+}
+.mini_photo{
+    max-width: 140px;
+    border-radius: var(--border-radius);
+}
+.key_project_name{
+    font-size: 32px;
+    letter-spacing: 1px;
+}
+.key_project_time{
+    font-size: 14px;
+    letter-spacing: 0.6px;
+    margin: 0 0 30px;
+}
+.key_project_desc{
+    font-size: 18px;
+    margin: 0 0 40px;
+    letter-spacing: 0.8px;
+}
+
+/* v2 project */
+.v2_project_right{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.key_points{
+    display: flex;
+    flex-direction: column;
+    gap: 10px 0;
+}
+.key_point{
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.8px;
+}
+.material-symbols-outlined{
+    font-size: 32px;
+}
+.key_point_desc{
+    font-size: 18px;
+    margin: 0 0 0 15px;
+}
+.v2_key_points{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px 0;
+}
+.v2_key_points .key_point{
+    flex-basis: 50%;
+}
+
 
 /* stats *********************************************/
-.stats{
+/* .stats{
     /* background: url('assets/stats_bg_v5.jpeg') no-repeat; */
     /* background-position: left center; */
     /* background-size: cover; */
-    /* min-height: 30vh; */
+    /* min-height: 30vh;
     padding: 80px 0;
     margin: 0 0 80px;
 }
@@ -228,7 +312,7 @@ a{
     font-size: 46px;
     font-weight: 700;
     margin: 0 0 50px;
-    /* text-decoration: underline; */
+    /* text-decoration: underline;
 }
 .stats_cards{
     display: flex;
@@ -252,16 +336,16 @@ a{
     /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
     /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
-    /* border-radius: var(--border-radius); */
+    /* border-radius: var(--border-radius);
 }
 .stat_card:hover{
     /* color: #FFFFFF; */
-    /* border: 1px solid transparent; */
+    /* border: 1px solid transparent;
     transform: scale(1.1);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
     background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-    /* animation: gradient_background 5s infinite linear; */
+    /* animation: gradient_background 5s infinite linear;
 }
 .stat_number{
     font-size: 44px;
@@ -269,7 +353,7 @@ a{
 }
 .stat_desc{
     font-size: 18px;
-}
+} */
 
 
 /* call cta popup ****************************************/
@@ -308,8 +392,8 @@ a{
 }
 
 
-/* portfolio industries ***********************************/
-.portfolio_page_wrap{
+/* portfolio industries 
+/* .portfolio_page_wrap{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -323,7 +407,7 @@ a{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    /* gap: 40px; */
+    /* gap: 40px;
 }
 .portfolio_industry_card{
     position: relative;
@@ -334,18 +418,17 @@ a{
     line-height: 0;
     background-position: center;
     background-size: cover;
-    /* border-radius: var(--border-radius); */
-}
+    /* border-radius: var(--border-radius);
+} */
 
-
-/* portfolio industry cards */
-.portf_landscape_card{
+/* portfolio industry cards
+/* .portf_landscape_card{
     background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('assets/home_categories/landscape_v1.jpeg');
     background-position: center;
     background-size: cover;
     border-right: 20px solid var(--main-black);
     border-bottom: 20px solid var(--main-black);
-    /* border-bottom: 4px; */
+    /* border-bottom: 4px;
 }
 .portf_landscape_card img{
     border-radius: 10px 0 0 0;
@@ -356,7 +439,7 @@ a{
     background-size: cover;
     border-left: 20px solid var(--main-black);
     border-bottom: 20px solid var(--main-black);
-    /* border-bottom: 4px; */
+    /* border-bottom: 4px;
 }
 .portf_architecture_card img{
     border-radius: 0 10px 0 0;
@@ -367,7 +450,7 @@ a{
     background-size: cover;
     border-top: 20px solid var(--main-black);
     border-right: 20px solid var(--main-black);
-    /* border-bottom: 4px; */
+    /* border-bottom: 4px;
 }
 .portf_interior_card img{
     border-radius: 0 0 0 10px;
@@ -378,16 +461,16 @@ a{
     background-size: cover;
     border-top: 20px solid var(--main-black);
     border-left: 20px solid var(--main-black);
-    /* border-bottom: 4px; */
+    /* border-bottom: 4px;
 }
 .portf_residential_card img{
     border-radius: 0 0 10px 0;
 }
 .portfolio_industry_image{
     max-width: 100%;
-    /* flex-basis: 50%; */
-    /* border-radius: var(--border-radius); */
-}
+    /* flex-basis: 50%;
+    /* border-radius: var(--border-radius);
+} */
 
 
 /* category heads *********************************************/
