--- a/main.css
+++ b/main.css
@@ -240,7 +240,7 @@ a{
     gap: 0 40px;
 }
 .key_project_left{
-    max-width: 600px;
+    max-width: 800px;
 }
 .key_project_main_image{
     max-width: 100%;
@@ -248,11 +248,14 @@ a{
     border-radius: var(--border-radius);
 }
 .mini_photos{
+    max-width: 100%;
     display: flex;
+    justify-content: space-between;
     gap: 0 12px;
 }
 .mini_photo{
-    max-width: 140px;
+    width: 190px;
+    max-width: 100%;
     border-radius: var(--border-radius);
 }
 .key_project_name{
@@ -295,7 +298,7 @@ a{
 }
 .v2_key_points{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 20px 0;
 }
