--- a/main.css
+++ b/main.css
@@ -169,7 +169,7 @@ a{
 
 /* industries *********************************************/
 .industries{
-    padding: 80px 0;
+    padding: 80px 0 0;
 }
 .industry_card_wrap{
     display: flex;
@@ -230,9 +230,34 @@ a{
     transition: 0.3s all;
 }
 
+/* sticky industries */
+.sticky_industries{
+    position: fixed;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 0 20px;
+    transition: 0.5s all linear;
+    background-color: #000000;
+}
+.sticky_industry{
+    /* text-decoration: underline; */
+    text-decoration-thickness: 0.5px;
+    letter-spacing: 1.5px;
+    color: #FFFFFF;
+}
+.sticky_industry:hover{
+    text-decoration: underline;
+    text-decoration-thickness: 0.8px;
+}
+
 /* key projects */
 .key_projects{
-    padding: 50px 0;
+    padding: 130px 0;
 }
 .key_projects_head{
     text-decoration: underline;
@@ -647,6 +672,9 @@ footer{
 }
 .project_card_active{
     transform: rotateY(180deg);
+}
+.show_sticky_industries{
+    top: 0px;
 }
 
 /* animations */
