--- a/main.css
+++ b/main.css
@@ -3,12 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-@font-face {
+/* @font-face {
     font-family: 'quackey_regular';
     src: url('assets/fonts/salina_trial_regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
-}
+} */
 .material-symbols-outlined{
     font-size: 32px;
 }
@@ -29,8 +29,8 @@ html{
 body{
     /* font-family: 'Inter', sans-serif; */
     /* font-family: 'Rubik', sans-serif; */
-    /* font-family: 'Kanit', sans-serif; */
-    font-family: 'quackey_regular';
+    font-family: 'Kanit', sans-serif;
+    /* font-family: 'quackey_regular'; */
 }
 a{
     text-decoration: none;
@@ -234,7 +234,7 @@ a{
 .sticky_industry{
     /* text-decoration: underline; */
     text-decoration-thickness: 0.5px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     color: #FFFFFF;
 }
 .sticky_industry:hover{
@@ -282,11 +282,23 @@ a{
     border-radius: var(--border-radius);
 }
 .key_project_name{
+    position: relative;
     font-size: 24px;
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: underline;
     text-decoration-thickness: 2px;
+}
+.ongoing_project{
+    position: absolute;
+    display: inline-block;
+    left: -30px;
+    top: 14px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    animation: live_indicator 1.5s linear infinite;
+    background-color: #4CAF50;
 }
 .key_project_time{
     font-size: 14px;
@@ -298,7 +310,7 @@ a{
 .key_project_desc{
     font-size: 18px;
     margin: 0 0 40px;
-    letter-spacing: 1.2px;
+    letter-spacing: 0.8px;
     line-height: 1.6;
 
 }
@@ -556,5 +568,13 @@ footer{
     100%{
         right: 0;
         opacity: 1;
+    }
+}
+@keyframes live_indicator {
+    0%{
+        box-shadow: 0 0 1px 2px rgba(76, 175, 80, 0.4);
+    }
+    100%{
+        box-shadow: 0 0 4px 8px rgba(76, 175, 80, 0.4);
     }
 }
