--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ a{
 }
 .hero_cta:hover{
     /* border: 2px solid; */
-    background-color: #000000;
+    background-color: var(--main-black);
     color: #FFFFFF;
 }
 
@@ -164,7 +164,6 @@ a{
 }
 .industry_card{
     position: relative;
-    cursor: pointer;
     overflow: hidden;
     text-align: center;
     max-width: 270px;
@@ -199,6 +198,7 @@ a{
     text-transform: capitalize;
     color: #FFFFFF;
     font-size: 22px;
+    letter-spacing: 1.2px;
     z-index: 1;
     top: 50%;
     left: 50%;
