--- a/main.css
+++ b/main.css
@@ -446,15 +446,36 @@ a{
 
 
 /* project cards *********************************************/
+.industry_tabs{
+    position: absolute;
+    top: 130px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 0 10px;
+}
+.industry_tab{
+    padding: 5px 10px;
+    opacity: 0;
+    transition: transform 1.5s, background-color 0.5s;
+    transform: scale(0);
+    border: 1px solid;
+    border-radius: var(--border-radius);
+    cursor: pointer;
+}
+.industry_tab:hover{
+    color: #FFFFFF;
+    background-color: var(--main-black);
+}
 .project_cards_wrap{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     gap: 40px;
+    opacity: 0;
     margin: 0 auto;
 }
 .project_card{
@@ -526,11 +547,18 @@ footer{
     opacity: 1;
     transform: scale(1);
 }
+.project_wrap_active{
+    opacity: 1;
+}
 .project_card_active{
     transform: rotateY(180deg);
 }
 .show_sticky_industries{
     top: 0px;
+}
+.industryTabActive{
+    color: #FFFFFF;
+    background-color: var(--main-black);
 }
 
 /* animations */
