--- a/main.css
+++ b/main.css
@@ -462,6 +462,7 @@ a{
     border: 1px solid;
     border-radius: var(--border-radius);
     cursor: pointer;
+    text-transform: capitalize;
 }
 .industry_tab:hover{
     color: #FFFFFF;
