--- a/main.css
+++ b/main.css
@@ -160,6 +160,7 @@ a{
 }
 .industry_card_wrap{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 .industry_card{
@@ -605,5 +606,185 @@ footer{
     }
     100%{
         box-shadow: 0 0 4px 8px rgba(76, 175, 80, 0.4);
+    }
+}
+
+/* responsive css */
+@media only screen and (max-width: 1023px){
+    /* header */
+    .header_container{
+        justify-content: center;
+    }
+    .logo_wrap{
+        text-align: center;
+    }
+    .navigation, .call_cta_wrap{
+        display: none;
+    }
+    /* hero */
+    .hero_container{
+        text-align: center;
+    }
+    .hero_head{
+        margin: 10px auto 50px;
+    }
+    /* industries */
+    .industry_card_wrap{
+        justify-content: center;
+        gap: 40px;
+    }
+    /* key projects */
+    .key_project{
+        flex-direction: column;
+        align-items: center;
+        gap: 40px 0;
+    }
+    .key_project_left{
+        order: -1;
+    }
+    .key_project_main_image{
+        max-width: 100%;
+    }
+    .key_project_right{
+        text-align: center;
+        max-width: 650px;
+    }
+    .key_project_name{
+        max-width: max-content;
+        margin: 0 auto;
+    }
+    .v2_key_points{
+        max-width: 500px;
+        margin: 0 auto;
+        text-align: initial;
+        flex-direction: row;
+    }
+}
+@media only screen and (max-width: 768px){
+    /* hero */
+    .hero_head{
+        font-size: 40px;
+    }
+    /* industries */
+    .industry_card{
+        max-width: 210px;
+    }
+    .industry_overlay{
+        max-height: 315px;
+    }
+    .sticky_industries{
+        top: -100px;
+    }
+    .key_projects_head{
+        font-size: 40px;
+        margin: 0 0 40px;
+    }
+    .key_project{
+        gap: 20px 0;
+    }
+    .v2_key_points{
+        gap: 10px 0;
+    }
+    .key_point_desc{
+        font-size: 16px;
+    }
+    .client_head{
+        font-size: 40px;
+        line-height: 1;
+    }
+}
+@media only screen and (max-width: 500px){
+    /* hero */
+    .hero_head{
+        font-size: 35px;
+    }
+    /* industries */
+    .sticky_industries{
+        top: -120px;
+    }
+    .industries{
+        padding: 50px 0 0;
+    }
+    .industry_card_wrap{
+        gap: 20px;
+    }
+    .industry_card{
+        max-width: 170px;
+    }
+    .industry_overlay{
+        max-height: 255px;
+    }
+    .industry_name{
+        font-size: 16px;
+        padding: 0 5px;
+        max-width: 100%;
+        overflow-wrap: break-word;
+    }
+    /* key projects */
+    .key_projects_wrap{
+        gap: 80px 0;
+    }
+    .key_projects_head{
+        font-size: 35px;
+    }
+    .key_project_name{
+        font-size: 20px;
+    }
+    .ongoing_project{
+        top: 10px;
+        left: -26px;
+    }
+    .key_project_time{
+        margin: 5px 0 20px;
+    }
+    .key_project_desc{
+        font-size: 16px;
+        margin: 0 0 20px;
+        line-height: 1.5;
+    }
+    .clients_wrap{
+        gap: 20px;
+    }
+    .client img{
+        max-width: 170px;
+    }
+}
+@media only screen and (max-width: 400px){
+    /* hero */
+    .hero_head{
+        font-size: 28px;
+        line-height: 1.4;
+    }
+    /* industries */
+    .industry_card{
+        max-width: 142px;
+    }
+    .industry_overlay{
+        max-height: 213px;
+    }
+    .industry_name{
+        top: 40%;
+    }
+    /* key projects */
+    .v2_key_points{
+        flex-direction: column;
+    }
+    .material-symbols-outlined{
+        font-size: 18px;
+    }
+    .key_point_desc{
+        font-size: 18px;
+    }
+    .ongoing_project{
+        left: -18px;
+    }
+    .client_head{
+        font-size: 30px;
+    }
+    .client img{
+        max-width: 140px;
+    }
+    .company_details{
+        font-size: 12px;
     }
 }
